index soulbound spacing glitch fix

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
 }
 
 .grad {
-  background: linear-gradient(#000000, #9198e5);
+  background: linear-gradient(#000000, #2e2e2e);
 }
 
 @font-face {
